--- a/trunk/battleship/templates/test.html
+++ b/trunk/battleship/templates/test.html
@@ -4,8 +4,20 @@
 <title>Test for long polling</title>
 <script type="text/javascript" src="/static/jquery-1.4.3.min.js"></script>
 <script type="text/javascript">
+var CURRENT_CLUSTERS = {};
+
 function long_poll() {
-    $.getJSON("{% url room_clusters %}");
+    $.get("{% url room_clusters %}", 
+            CURRENT_CLUSTERS,
+            function (data, textStatus, xhr) {
+                    console.log(data);
+                    console.log(textStatus);
+                    console.log(xhr);
+                    CURRENT_CLUSTERS = data;
+                    $("#result")[0].innerHTML = CURRENT_CLUSTERS;
+                    long_poll();
+                }
+            );
 }
 </script>
 </head>
