--- a/trunk/battleship/templates/room.html
+++ b/trunk/battleship/templates/room.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Battleship</title>
+<link rel="stylesheet" type="text/css" href="/static/battleship.css" />
 <script type="text/javascript" src="/static/jquery-1.4.3.min.js"></script>
 <script type="text/javascript">
 var CURRENT_CLUSTERS = {};
