--- a/static/battleship.css
+++ b/static/battleship.css
@@ -18,3 +18,12 @@ body {
 #gamearea {
 
 }
+
+.step {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    height: 20px;
+    width: 20px;
+    background-color: blue;
+}
