--- a/trunk/battleship/templates/room.html
+++ b/trunk/battleship/templates/room.html
@@ -21,7 +21,7 @@ function long_poll() {
                         steps[i].style.visibility = "hidden";
                     }
                     
-                    var clusters = data['mide'];
+                    var clusters = data['clusters'];
                     if(clusters !== undefined) {
                         for(var k = 0; k < clusters.length; k++) {
                             cluster_json = clusters[k];
