--- a/trunk/static/battleship.css
+++ b/trunk/static/battleship.css
@@ -129,6 +129,15 @@ body {
     left:1020px;
 }
 
+#infofloat{
+    display:none;
+    position: absolute;
+    height:385px;
+    width:385px;
+    top:300px;
+    left:250px;
+}
+
 #gamearea {
 
 }
